--- a/style.css
+++ b/style.css
@@ -4,14 +4,8 @@
   box-sizing: border-box;
 }
 
-
-body{
-    background-color: white;
-    }
-
 h1{
   font-family: Arial, Helvetica, sans-serif;
-  color: black;
   text-align: center;
   text-decoration: overline;
   text-decoration-color: brown;
@@ -39,33 +33,26 @@ h1{
   label{
     display: inline;
     font-family: Arial, Helvetica, sans-serif;
-  color: black;
   text-align: center;
-  text-decoration-color: brown;
   text-transform: uppercase;
-  text-shadow: 2em 2em 2em brown;
-  text-decoration-style: solid;
-  text-decoration-thickness: 4px;
-
-  }
+ }
   
   input{
     font-family: Arial, Helvetica, sans-serif;
-  color: black;
   text-align: center;
-  text-decoration-color: brown;
-  text-transform: uppercase;
-  text-shadow: 10em 10em 20em brown;
 
   }
 
   button{
     margin-top: 1em;
     margin-left: 2em;
+    padding: 0.3em;
+    border-radius: 0.4em;
   }
 
   button:hover{
     background-color: rgb(143, 105, 105);
+    cursor: pointer;
   }
   
 
